--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,9 @@
             <hr class="text-dark">
             <div class="row text-center">
                 <div class="col-sm">
-                    <div id="address">
+                   <div id="address">
                         <h5>Adres</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit deserunt quibusdam illo voluptatibus sunt iusto, 
-                        cupiditate quis et eaque reiciendis praesentium repudiandae eligendi voluptates perspiciatis beatae, aspernatur debitis alias inventore.
-                        </p>
+                        <p>Altıntaş, Namık Kemal Cd. No:27 Daire:1, 09800 Nazilli/Aydın</p>
                         <hr class="hidden" id="hidden-hr-1">
                     </div>
                 </div>
