--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Megakit - HTML5 Theme</title>
-        <meta name="keywords" content="HTML5 Theme" />
-        <meta name="description" content="Megakit - HTML5 Theme">
-        <meta name="author" content="keenthemes.com">
-
+        <title>Dt. Suedanur Katı</title>
+        <meta name="description" content="Dt. Suedanur Katı Diş Kliniği olarak, Nazilli'de modern ve kaliteli diş hizmetleri sunuyoruz. Sağlıklı gülümsemenizi ön planda tutarak, güvenli ve konforlu bir tedavi deneyimi sunuyoruz. İhtiyaçlarınıza özel tedavi planlarıyla, en son teknolojileri kullanarak sizlere en iyi çözümleri sunuyoruz. Randevu alarak bizi ziyaret edin ve diş sağlığınızı önemseyen deneyimli ekibimizle tanışın.">
         <!-- Web Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i|Montserrat:400,700" rel="stylesheet">
 
@@ -25,7 +22,7 @@
         <link href="css/global/global.css" rel="stylesheet" type="text/css"/>
 
         <!-- Favicon -->
-
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico.png" />
         <!-- icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
