correction about duration

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                         <!-- Media -->
                         <div class="clearfix">
                             <div class="g-media g-width-60--xs">
-                                <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".4s">
+                                <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay="1s">
                                     <!-- SVG Icon -->
                                       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                                         <g>
@@ -624,7 +624,7 @@
                         <!-- Media -->
                         <div class="clearfix">
                             <div class="g-media g-width-60--xs">
-                                <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".5s">
+                                <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay="1.1s">
                                     <!-- SVG Icon -->
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                                         <g>
@@ -662,7 +662,7 @@
                         <!-- Media -->
                         <div class="clearfix">
                             <div class="g-media g-width-60--xs">
-                                <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay=".6s">
+                                <div class="wow fadeInUp" data-wow-duration=".3" data-wow-delay="1.2s">
                                     <!-- SVG Icon -->
                                       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                                         <g>
