--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                             <a href="index.html" class="s-header-v2__logo-link">
                                 <div style="display: flex; align-items: flex-start;">
                                     <img class="s-header-v2__logo-img s-header-v2__logo-img--default" style="height: 100px; width: 90px;" src="images/logo.png" alt="Dublin Logo">
-                                    <img class="s-header-v2__logo-img s-header-v2__logo-img--default" src="images/dtname2.png" alt="Dublin Logo">
+                                    <img class="s-header-v2__logo-text s-header-v2__logo-img--default" src="images/dtname2.png" alt="Dublin Logo">
                                     <img class="s-header-v2__logo-img s-header-v2__logo-img--shrink" style="height: 100px; width: 90px;" src="images/logo.png" alt="Dublin Logo">
-                                    <img class="s-header-v2__logo-img s-header-v2__logo-img--shrink" src="images/dtname.png" alt="Dublin Logo">
+                                    <img class="s-header-v2__logo-text s-header-v2__logo-img--shrink"  src="images/dtname.png" alt="Dublin Logo">
                                 </div>
                             </a>
                         </div>
