--- a/index.html
+++ b/index.html
@@ -740,7 +740,8 @@
                     <!-- Contacts -->
                     <div class="col-md-6 js__form-eqaul-height-v1">
                         <div class="g-overflow--hidden g-padding-x-40--xs g-padding-y-50--xs">
-                            <h2 class="g-font-size-24--xs g-color--white g-margin-b-50--xs">İletişim</h2>
+                            <h2 class="g-font-size-24--xs g-color--white ">İletişim</h2>
+                            <hr/>
                             <ul class="list-unstyled g-margin-b-70--xs">
                                <!-- Adres -->
                                 <li class="clearfix g-color--white g-margin-b-20--xs">
@@ -751,7 +752,6 @@
                                     </div>
                                 </li>
 
-                                <!-- Telefon numarası -->
                                 <li class="clearfix g-color--white g-margin-b-40--xs">
                                     <div class="g-media__body">
                                         <a style="color: white;" href="tel:+905534693995">
@@ -764,7 +764,8 @@
                     </div>
                     <div class="col-md-6 js__form-eqaul-height-v1">
                         <div class="g-overflow--hidden g-padding-x-40--xs g-padding-y-50--xs">
-                            <h2 class="g-font-size-24--xs g-color--white g-margin-b-50--xs">Çalışma Saatleri</h2>
+                            <h2 class="g-font-size-24--xs g-color--white">Çalışma Saatleri</h2>
+                            <hr/>
                             <ul class="list-unstyled g-margin-b-70--xs">
                                 <li class="clearfix g-color--white g-margin-b-20--xs">
                                     <div class="g-media__body">
