--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 <div class="g-margin-b-80--xs">
                     <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">İyileşmenin En Hızlı Yolu</h2>
                 </div>
-                <div style="display: flex; justify-content: center; gap: 10px;">
+                <div style="display: flex; justify-content: center; gap: 10px;;">
                     <a href="https://wa.me/905534693995?text=Merhaba%20bilgi%20almak%20istiyorum." class="s-btn s-btn--md s-btn--white-brd g-radius--50" target="_blank">
                         Daha fazla bilgi &nbsp; &nbsp;<i class="fab fa-whatsapp"></i>
                     </a>
@@ -807,7 +807,11 @@
         <!--========== END FOOTER ==========-->
 
         <!-- Back To Top -->
-        <a href="javascript:void(0);" class="s-back-to-top js__back-to-top"></a>
+        <a style="border: #FFFFFF solid 2px;" href="javascript:void(0);" class="s-back-to-top js__back-to-top">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                <path d="M7 15l5-5 5 5H7z"/>
+            </svg>
+        </a>
 
         <!--========== JAVASCRIPTS (Load javascripts at bottom, this will reduce page load time) ==========-->
         <!-- Vendor -->
